--- a/te amo.html
+++ b/te amo.html
@@ -25,13 +25,13 @@
       align-items: center;
     }
 
+    /* Corazón corregido */
     .heart {
       position: relative;
       width: 200px;
       height: 200px;
       background-color: #ff0000;
       transform: rotate(-45deg);
-      box-shadow: 0 0 30px 15px #ff6666, 0 0 60px 30px #ff3333;
       animation: pulse 1.5s infinite;
       z-index: 1;
     }
